--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "path": "^0.12.7",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-modal": "^1.4.0"
+    "react-router": "^2.8.1"
   }
 }
