--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+	"build": "webpack --optimize-minimize --optimize-dedupe"
   },
   "author": "Micah Cowell",
   "license": "MIT",
