--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "node server.js",
-	"build": "webpack --optimize-minimize --optimize-dedupe"
+	"build": "webpack -p --config ./webpack.config.prod.js"
   },
   "author": "Micah Cowell",
   "license": "MIT",
