--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "node server.js",
-	"build": "webpack -p --config ./webpack.config.prod.js"
+    "start": "gulp"
   },
   "author": "Micah Cowell",
   "license": "MIT",
@@ -16,10 +15,14 @@
     "babel-preset-react": "^6.16.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-input-autosize": "^1.1.0",
     "react-router": "^2.8.1",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-util": "^3.0.7",
+    "node-sass": "^3.10.1",
     "webpack-dev-server": "^1.16.2"
   }
 }
