--- a/package.json
+++ b/package.json
@@ -4,25 +4,26 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "gulp"
+    "start": "node server.js"
   },
   "author": "Micah Cowell",
   "license": "MIT",
   "dependencies": {
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-input-autosize": "^1.1.0",
-    "react-router": "^2.8.1",
-    "webpack": "^1.13.2"
+    "react-router": "^2.8.1"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-util": "^3.0.7",
-    "node-sass": "^3.10.1",
-    "webpack-dev-server": "^1.16.2"
+    "babel-core": "^6.0.20",
+    "babel-eslint": "^4.1.3",
+    "babel-loader": "^6.0.1",
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.0.15",
+    "eslint": "^1.10.3",
+    "eslint-plugin-react": "^3.6.2",
+    "react-hot-loader": "^3.0.0-beta.1",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.1"
   }
 }
