--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ permalink: /blog/:title
 
 
 # My variables
-name: Micah Cowell
-description: Futuristic web design
+name: Zach Newman
+description: Github Blog
 google_verification: null
 
 
