--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
   url: /me
 
 - title: github
-  url: https://github.com/getmicah
+  url: https://github.com/ztnewman
 
 - title: twitter
-  url: https://twitter.com/getmicah
+  url: https://twitter.com/ztnewman
